--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatbot</title>
-    <script src="file:///C:/Users/kesavan.anbu/Desktop/ChatDev/app/app.js" defer></script>
-    <!-- <script src="app.js" defer></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/kesavananbu/app@master/app.js" defer></script> -->
+    <script src="app.js" defer></script>
   </head>
   <body>
     <div id="chatContainer"></div>
